вторая итерация сдачи финального задания спринт 5
(П.С. спасибо за сопровождение:))