@@ -2,24 +2,26 @@ package service;
 
 import model.Task;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private static ArrayList<Task> listOfRecalledTasks = new ArrayList<>();
+    private static LinkedList<Task> listOfRecalledTasks = new LinkedList<>();
 
     @Override
     public void add(Task task) {
+        listOfRecalledTasks.add(task);
     }
 
     @Override
-    public ArrayList<Task> getHistory() {
+    public LinkedList<Task> getHistory() {
         return listOfRecalledTasks;
     }
 
     static void updateListOfRecalledTasks(Task task) {
+        final int MAX_LIST_SIZE = 10;
         listOfRecalledTasks.add(task);
-        if (listOfRecalledTasks.size() > 10) {
-            listOfRecalledTasks.remove(0);
+        if (listOfRecalledTasks.size() > MAX_LIST_SIZE) {
+            listOfRecalledTasks.removeFirst();
         }
     }
 }
